Bug 509037 - task's icon is missaligned with text in month view
Summary: task's icon is missaligned with text in month view
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 6.5.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 510529 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-02 18:16 UTC by rosswzyang
Modified: 2025-10-12 15:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2
Sentry Crash Report:


Attachments
desc (167.46 KB, image/png)
2025-09-02 18:16 UTC, rosswzyang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rosswzyang 2025-09-02 18:16:02 UTC
Created attachment 184652 [details]
desc

***
task's icon is missaligned with text in month view
***

SUMMARY


STEPS TO REPRODUCE
1. create a todo task
2. swicth to month view


OBSERVED RESULT
task's icon is missaligned with text in month view

EXPECTED RESULT
task's icon is aligned with text in month view


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.3-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 14 × Intel® Core™ Ultra 5 225H
Memory: 32 GiB of RAM (30.8 GiB usable)
Graphics Processor: Intel® Graphics
Comment 1 Allen Winter 2025-09-04 13:28:01 UTC
strange. works perfectly for me here.

any chance you are using a different icon set or font set?
I need some way to reproduce the problem before I can try to fix it
Comment 2 rosswzyang 2025-09-04 13:56:28 UTC
(In reply to Allen Winter from comment #1)
> strange. works perfectly for me here.
> 
> any chance you are using a different icon set or font set?
> I need some way to reproduce the problem before I can try to fix it

no, I just use the default breeze icon and default font set. I think this issue is intentional, because the festival icon in month view has the same misaligned postion
Comment 3 Allen Winter 2025-09-07 11:48:15 UTC
so far I still cannot replicate this.

high dpi monitor or some-such?
Comment 4 Bug Janitor Service 2025-09-07 12:51:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/176
Comment 5 Allen Winter 2025-09-08 12:07:19 UTC
Git commit a92e9aef38c542c30de069e39051534b12f4a6a2 by Allen Winter.
Committed on 08/09/2025 at 12:05.
Pushed by winterz into branch 'master'.

monthgraphicsitems.cpp - hard-set the icon height to 16 pixels

Attempt to improve the icon-to-text vertical alignment by
realizing that we always use 16-pixel high icons for the
monthview items.

Previously, if the first icon in our display list had a height
of 32-pixels somehow (rather than 16) the icon-to-text would be
badly mis-aligned.

M  +2    -2    src/month/monthgraphicsitems.cpp

https://invent.kde.org/pim/eventviews/-/commit/a92e9aef38c542c30de069e39051534b12f4a6a2
Comment 6 rosswzyang 2025-09-09 16:59:21 UTC
(In reply to Allen Winter from comment #3)
> so far I still cannot replicate this.
> 
> high dpi monitor or some-such?

yes, my screen resolution is 2880 * 1880
Comment 7 Allen Winter 2025-10-06 12:17:44 UTC
Git commit 7793c8000a43f61cc5482aca5d1f38d3c656d927 by Allen Winter.
Committed on 06/10/2025 at 12:17.
Pushed by winterz into branch 'release/25.08'.

monthgraphicsitems.cpp - hard-set the icon height to 16 pixels

Attempt to improve the icon-to-text vertical alignment by
realizing that we always use 16-pixel high icons for the
monthview items.

Previously, if the first icon in our display list had a height
of 32-pixels somehow (rather than 16) the icon-to-text would be
badly mis-aligned.


(cherry picked from commit a92e9aef38c542c30de069e39051534b12f4a6a2)

Co-authored-by: Allen Winter <winter@kde.org>

M  +2    -2    src/month/monthgraphicsitems.cpp

https://invent.kde.org/pim/eventviews/-/commit/7793c8000a43f61cc5482aca5d1f38d3c656d927
Comment 8 Allen Winter 2025-10-12 15:53:28 UTC
*** Bug 510529 has been marked as a duplicate of this bug. ***