monthgraphicsitems.cpp - hard-set the icon height to 16 pixels

Attempt to improve the icon-to-text vertical alignment by
realizing that we always use 16-pixel high icons for the
monthview items.

Previously, if the first icon in our display list had a height
of 32-pixels somehow (rather than 16) the icon-to-text would be
badly mis-aligned.

BUG: 509037


(cherry picked from commit a92e9aef38c542c30de069e39051534b12f4a6a2)

Co-authored-by: Allen Winter <winter@kde.org>